--- a/modules/rest/pom.xml
+++ b/modules/rest/pom.xml
@@ -3,8 +3,8 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>grytsenko</groupId>
-    <artifactId>contacts</artifactId>
+    <groupId>contacts</groupId>
+    <artifactId>contacts-rest</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
