--- a/modules/android-app/pom.xml
+++ b/modules/android-app/pom.xml
@@ -24,7 +24,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>${project.artifactId}</finalName>
+        <finalName>corporate-contacts</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
