--- a/modules/android-app/pom.xml
+++ b/modules/android-app/pom.xml
@@ -13,6 +13,8 @@
 
         <platform.version>4.1.1.4</platform.version>
         <android.plugin.version>3.6.0</android.plugin.version>
+
+        <junit.version>4.11</junit.version>
     </properties>
 
     <dependencies>
@@ -22,7 +24,15 @@
             <version>${platform.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+
     <build>
         <finalName>corporate-contacts</finalName>
         <pluginManagement>
