--- a/modules/rest/pom.xml
+++ b/modules/rest/pom.xml
@@ -8,8 +8,8 @@
     <version>0.1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>contacts</name>
-    <description>Web application for managing corporate contacts.</description>
+    <name>contacts-rest</name>
+    <description>REST API for corporate contacts.</description>
     <url>https://github.com/grytsenko/contacts</url>
     <inceptionYear>2013</inceptionYear>
 
